# sevdev.hu

./: .gitignore  Makefile  README.md  about.md  default.nix  gulpfile.js  package.json  sevdev-hakyll.cabal  site.hs  stack.yaml  static-site.cabal  tsconfig.json
blog/: .gitignore  default.nix  deploy.sh  release.nix
blog/css/: base.css  base_md.css  palette
blog/posts/: 2015-08-25-circumventing-required-user-interaction-for-html5-media.md  2016-06-26-publishing-to-ipfs.md  2016-10-14-testing-ngmodel-in-angular-2.md  2016-11-16-working-with-bitcoin-hd-wallets.md  2017-01-16-working-with-bitcoin-hd-wallets-ii.md  2017-07-22-authentication-using-https-client-certificates.md  2017-12-26-discovering-nix-deploying-a-simple-nginx-with-nixops.md  2018-02-19-First-class-functions-in-JavaScript.md  2018-02-19-first-class-functions-in-javascript.md  2018-02-22-js-monads.md  2018-09-30-failure-culture-beyond-blaming.md  2018-10-29-front-end-cd-with-nixops-and-httpd-part-1.md  2018-11-05-front-end-cd-with-nixops-and-httpd-part-2.md  2019-02-03-writing-css-that-scales-encapsulation.md  2019-02-04-writing-css-that-scales-thinking-inside-the-box.md  2020-02-08-simple-cd-for-static-webapps_hu.md
blog/sample-projects/nixos-cd/: network-vbox.nix  network.nix
blog/templates/: default.amp.html  default.html  post.html
css/: .base.css.swp  about.css  base.css  base_sm.css  default.css  splash.css
generator/: LICENSE  Main.hs  Paths.hs  build.sh  default.nix  release.nix  sevdev-hakyll.cabal  shell.nix  stack.yaml
generator/assets/templates/: post-item.html
images/src/: .the_rest.svg.swp
less/: base.less  default.less  splash.less
ops/: ci.nix  fileserver-test.nix  fileserver.nix  network-test.nix  network.nix
ops/config/mautrix-facebook/: config.yaml
ops/hardware/: ramnode-kvm.nix
ops/nixpkgs/: default.nix  mautrix-facebook.nix
ops/prod/: fileserver.nix
ops/sandbox/: .gitignore  jenkins.nix  network.nix  ramnode-kvm.nix  security.nix  ssh.nix  webserver.nix  www-deploy-rsa-ci.pub  www-deploy-rsa-local.pub
ops/security/: admin-ssh.nix
ops/server/: hydra.nix  matrix-homeserver.nix  matrix-proxy.nix  static-nginx.nix
posts/: 2012-12-07-tu-quoque.markdown  2015-08-24-hello-world.md  2015-08-24-marrying-html-imports-and-es2015-modules.md  2015-08-28-the-self-keywords-ES2015-alternative.md  2016-06-26-publishing-to-ipfs.md  2016-09-19-vertical-alignment-without-flexbox.md  2016-10-14-testing-ngmodel-in-angular-2.md  2016-10-14-unit-testing-ngmodel-in-angular-2  2016-11-18-generating-deterministic-bitcoin-wallets.md  2016-11-18-working-with-bitcoin-hd-wallets.md  2017-01-16-working-with-bitcoin-hd-wallets-ii.md
resume/: .eslintrc  .gitignore  analytics.js  bower.json  branding.js  default.nix  dependencies.nix  gulpfile.js  index.css  index.html  package-lock.json  package.json
resume/components/: contact.css  contact.html  contact.js  header.css  header.html  header.js  menu.css  menu.html  menu.js  project.css  project.html  project.js  resume.css  resume.html  resume.js  skillset.css  skillset.html  skillset.js  timeline.css  timeline.html  timeline.js
resume/modules/: analytics.js
scripts/: splash.ts
scripts/main/: main.component.ts
scripts/splash/: splash.component.ts  splash.directive.ts
templates/: amp.html  default.html  inline-post.html  post-list.html  post.html  splash.html
