name:               sevdev-hakyll
version:            0.0.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , unordered-containers == 0.2.7.*
  ghc-options:      -threaded
  default-language: Haskell2010
