name:               sevdev-hakyll
version:            0.0.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT
license-file:       LICENSE

executable site
  main-is:          site.hs
  build-depends:    base < 5
                  , hakyll
                  , unordered-containers
  ghc-options:      -threaded
  default-language: Haskell2010
