name:                static-site
version:             0.1.0.0
synopsis:            Personal hakyll site
description:         Please see README.md
homepage:            http://github.com/sevcsik/static-site
license:             MIT
license-file:        LICENSE
author:              Andras Sevcsik
maintainer:          sevcsik@sevdev.hu
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable static-site-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , static-site
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , new-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sevcsik/static-site
