name:               sevdev-site-generator
version:            1
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT
license-file:       LICENSE
data-dir:           assets
data-files:         templates/*.html
                  , css/*.css
                  , fonts/*.ttf
                  , images/*.svg
                  , images/*.png
                  , images/*.jpg
                  , images/*.gif


executable site
  main-is:          Main.hs
  build-depends:    base < 5
                  , hakyll
                  , unordered-containers
                  , filepath
                  , directory
  other-modules:    Paths_sevdev_site_generator
  autogen-modules:  Paths_sevdev_site_generator
  ghc-options:      -threaded
  default-language: Haskell2010
  extensions:       CPP
                  , OverloadedStrings
  cpp-options:      -DUSE_REAL_DATA_DIR
